--- a/libraries/cvg/sun268.tex
+++ b/libraries/cvg/sun268.tex
@@ -1,508 +1,32 @@
-\documentstyle[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,nolof]{starlink}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 %------------------------------------------------------------------------------
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun268.0}
-\newcommand{\stardocnumber}    {268.0}
-\newcommand{\stardocauthors}   {D.S. Berry \& M.J. Currie}
-\newcommand{\stardocdate}      {14th November 2013}
-\newcommand{\stardoctitle}     {CVG \\ [\latex{1ex}]
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun268.0}
+\stardocnumber      {268.0}
+\stardocauthors     {D.S. Berry \& M.J. Currie}
+\stardocdate        {14th November 2013}
+\stardoctitle       {CVG \\ [\latex{1ex}]
                                 A Library of Format Conversion Utilities}
-\newcommand{\stardocversion}   {Version 1.0}
-\newcommand{\stardocmanual}    {Programmer's Manual}
+\stardocversion     {Version 1.0}
+\stardocmanual      {Programmer's Manual}
+\stardocabstract {%
+CVG provides utility functions for handling data format conversion tasks.
+}
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
-
-
+% ? Document specific \providecommand or \newenvironment commands.
 
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   STFC / {\sc Joint Astronomy Centre, Hawaii} \hfill {\bf \stardocname}\\
-   {\large Science \& Technology Facilities Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \renewcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-
-
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%   ==================
-
-CVG provides utility functions for handling data format conversion tasks.
-
-% ? End of document
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
- \newpage
- \begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \latexonlytoc
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
- \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section {Introduction}
 
@@ -538,7 +62,7 @@ been moved into a separate library.
       \sstsubsection{
          MODE = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         The access mode: {\tt '}READ{\tt '} or {\tt '}UPDATE. Case insensitive.
+         The access mode: \texttt{'} READ\texttt{'}  or \texttt{'} UPDATE. Case insensitive.
          Abbreviations can be used.
       }
       \sstsubsection{
@@ -777,7 +301,7 @@ been moved into a separate library.
       are no error messages in the stack, this routine appends the
       short translation of the error number, and if there is no
       translation, it reports the FITSIO error number and instruct the
-      reader to consult the FITSIO User{\tt '}s Guide.
+      reader to consult the FITSIO User\texttt{'} s Guide.
 
       The global status is set to SAI\_\_ERROR.  This routine attempts
       to work even if the global status is bad on entry.
@@ -796,7 +320,7 @@ been moved into a separate library.
       }{
          The parameter name of the error report.  It usually comprises
          the name of the routine where the FITSIO routine is called
-         followed by some suitable suffix like {\tt '}\_ERR{\tt '}.
+         followed by some suitable suffix like \texttt{'} \_ERR\texttt{'} .
       }
       \sstsubsection{
          ROUTIN = CHARACTER $*$ ( $*$ ) (Given)
@@ -810,7 +334,7 @@ been moved into a separate library.
          A contextual error message to form part of the error report.
          It should indicate what was happening when the call to the
          FITSIO routine was made.  No punctuation is added between
-         this and the {\tt "}Error was{\tt "} text, so a full stop should appear
+         this and the \texttt{"} Error was\texttt{"}  text, so a full stop should appear
          in this message.
       }
       \sstsubsection{
@@ -1013,7 +537,7 @@ been moved into a separate library.
       \sstsubsection{
          PATH = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         The path to the file to be created. A file type of {\tt "}.fit{\tt "} will be
+         The path to the file to be created. A file type of \texttt{"} .fit\texttt{"}  will be
          added if there is no file type in the supplied string.
       }
       \sstsubsection{
@@ -1059,13 +583,13 @@ been moved into a separate library.
       \sstsubsection{
          PATH = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         The path to the file to be created. A file type of {\tt "}.fit{\tt "} will be
+         The path to the file to be created. A file type of \texttt{"} .fit\texttt{"}  will be
          added if there is no file type in the supplied string.
       }
       \sstsubsection{
          MODE = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         The access mode: {\tt '}READ{\tt '} or {\tt '}UPDATE. Case insensitive.
+         The access mode: \texttt{'} READ\texttt{'}  or \texttt{'} UPDATE. Case insensitive.
          Abbreviations can be used.
       }
       \sstsubsection{
@@ -1118,10 +642,10 @@ been moved into a separate library.
       FILEID  = \_CHAR                / Filename without extension
 
       The above headers are prefaced by a blank header and a title
-      {\tt "}Provenance:{\tt "} comment.
+      \texttt{"} Provenance:\texttt{"}  comment.
 
-      The PRODUCT keyword{\tt '}s value is modified for FITS extensions.  It
-      has {\tt '}\_$<$extname$>${\tt '} appended where $<$extname$>$ is the lowercase name of
+      The PRODUCT keyword\texttt{'} s value is modified for FITS extensions.  It
+      has \texttt{'} \_$<$extname$>$\texttt{'}  appended where $<$extname$>$ is the lowercase name of
       the standard EXTNAME keyword.
    }
    \sstinvocation{
@@ -1150,7 +674,7 @@ been moved into a separate library.
       \sstitemlist{
 
          \sstitem
-         Ancestors that have been flagged as {\tt "}hidden{\tt "} are ignored.
+         Ancestors that have been flagged as \texttt{"} hidden\texttt{"}  are ignored.
 
          \sstitem
          A warning is issued if the OBSIDSS component cannot be found
@@ -1209,7 +733,7 @@ been moved into a separate library.
       \sstitemlist{
 
          \sstitem
-         There is a routine for all numeric data types: replace {\tt "}x{\tt "} in
+         There is a routine for all numeric data types: replace \texttt{"} x\texttt{"}  in
          the routine name by B, D, I, R, UB, UW, or W as appropriate.  The
          VALUE and DATA arguments must have the data type specified.
       }
@@ -1250,10 +774,10 @@ been moved into a separate library.
       FILEID  = \_CHAR                / Filename without extension
 
       The above headers are prefaced by a blank header and a title
-      {\tt "}Provenance:{\tt "} comment.
+      \texttt{"} Provenance:\texttt{"}  comment.
 
-      The PRODUCT keyword{\tt '}s value is modified for FITS extensions.  It
-      has {\tt '}\_$<$extname$>${\tt '} appended where $<$extname$>$ is the lowercase name of
+      The PRODUCT keyword\texttt{'} s value is modified for FITS extensions.  It
+      has \texttt{'} \_$<$extname$>$\texttt{'}  appended where $<$extname$>$ is the lowercase name of
       the standard EXTNAME keyword.
    }
    \sstinvocation{
@@ -1283,7 +807,7 @@ been moved into a separate library.
       \sstitemlist{
 
          \sstitem
-         Ancestors that have been flagged as {\tt "}hidden{\tt "} are ignored.
+         Ancestors that have been flagged as \texttt{"} hidden\texttt{"}  are ignored.
 
          \sstitem
          A warning is issued if the OBSIDSS component cannot be found
@@ -1381,7 +905,7 @@ been moved into a separate library.
       The tabulated indexed headers below, all with string values, are
       written for each ancestor NDF.  The keyword index n is the
       provenance identifier for each NDF, starting at 0 corresponding
-      to the current NDF.  All have value {\tt '}$<$unknown$>${\tt '} if the information
+      to the current NDF.  All have value \texttt{'} $<$unknown$>$\texttt{'}  if the information
       could not be found, except for MORE information; the PRVMn header
       is omitted if there is no MORE information to record.
 
@@ -1401,7 +925,7 @@ been moved into a separate library.
       3rd, 4th.
 
       The above headers are prefaced by a blank header and a title
-      {\tt "}Provenance:{\tt "} comment.  There is a blank header between each set
+      \texttt{"} Provenance:\texttt{"}  comment.  There is a blank header between each set
       for improved legibility.
    }
    \sstinvocation{
@@ -1437,7 +961,7 @@ been moved into a separate library.
          the maximum 68 characters allowed in a keyword character value.
          Therefore this routine uses the non-standard Long-string Keyword
          Convention that permits long strings to continue over multiple
-         headers.  If any of the aforementioned keywords{\tt '} values exceeds 68
+         headers.  If any of the aforementioned keywords\texttt{'}  values exceeds 68
          characters, this routine adds a warning in some COMMENT headers
          and writes a LONGSTRN header, whose value is the version of the
          convention being used.
